//! MarketIntelligenceService implementation
//! 
//! Provides advanced analytics and real-time market intelligence including:
//! - Real-time market data with comprehensive analytics
//! - ML-powered sentiment analysis across multiple sources
//! - Predictive analytics for yield optimization
//! - Cross-chain arbitrage opportunity detection
//! - Market trend analysis with AI insights
//! - Advanced risk assessment with scenario modeling
//! - Liquidity analysis across multiple DEXs
//! - Whale activity monitoring and alerts
//! - DeFi protocol health monitoring
//! - Market manipulation detection

use std::sync::Arc;
use tonic::{Request, Response, Status};
use tracing::{info, warn, error, instrument};
use uuid::Uuid;
use chrono::{DateTime, Utc};
use serde_json;

use crate::proto::fo3::wallet::v1::{
    market_intelligence_service_server::MarketIntelligenceService,
    *,
};
use crate::middleware::{
    auth::AuthService,
    audit::AuditLogger,
    rate_limit::RateLimiter,
};
use crate::ml::{ModelManager, InferenceRequest};
use crate::error::ServiceError;

/// MarketIntelligenceService implementation with advanced analytics capabilities
pub struct MarketIntelligenceServiceImpl {
    auth_service: Arc<AuthService>,
    audit_logger: Arc<AuditLogger>,
    rate_limiter: Arc<RateLimiter>,
    model_manager: Arc<ModelManager>,
}

impl MarketIntelligenceServiceImpl {
    /// Create new MarketIntelligenceService instance
    pub fn new(
        auth_service: Arc<AuthService>,
        audit_logger: Arc<AuditLogger>,
        rate_limiter: Arc<RateLimiter>,
        model_manager: Arc<ModelManager>,
    ) -> Self {
        Self {
            auth_service,
            audit_logger,
            rate_limiter,
            model_manager,
        }
    }

    /// Generate mock real-time market data
    fn generate_mock_market_data(&self, symbols: &[String]) -> Vec<MarketDataPoint> {
        symbols
            .iter()
            .enumerate()
            .map(|(i, symbol)| {
                let base_price = 1000.0 + (i as f64 * 100.0);
                let price_change = (i as f64 - 2.0) * 5.0; // Range from -10% to +15%
                
                MarketDataPoint {
                    symbol: symbol.clone(),
                    blockchain: "ethereum".to_string(),
                    price: format!("{:.2}", base_price),
                    volume_24h: format!("{:.2}", base_price * 1000.0),
                    market_cap: format!("{:.2}", base_price * 1_000_000.0),
                    price_change_24h: format!("{:.2}", base_price * price_change / 100.0),
                    price_change_percentage_24h: format!("{:.2}", price_change),
                    liquidity: format!("{:.2}", base_price * 10000.0),
                    volatility: format!("{:.2}", 0.3 + (i as f64 * 0.1)),
                    orderbook: Some(self.generate_mock_orderbook(base_price)),
                    recent_trades: self.generate_mock_trades(base_price, 5),
                    technical_indicators: Some(self.generate_mock_technical_indicators(base_price)),
                    timestamp: Some(prost_types::Timestamp::from(Utc::now())),
                }
            })
            .collect()
    }

    /// Generate mock orderbook data
    fn generate_mock_orderbook(&self, base_price: f64) -> OrderBookData {
        let spread = base_price * 0.001; // 0.1% spread
        let mid_price = base_price;
        
        let bids = (0..5)
            .map(|i| OrderBookLevel {
                price: format!("{:.2}", mid_price - (i as f64 + 1.0) * spread),
                quantity: format!("{:.4}", 10.0 + (i as f64 * 2.0)),
                order_count: 5 + i,
            })
            .collect();

        let asks = (0..5)
            .map(|i| OrderBookLevel {
                price: format!("{:.2}", mid_price + (i as f64 + 1.0) * spread),
                quantity: format!("{:.4}", 8.0 + (i as f64 * 1.5)),
                order_count: 4 + i,
            })
            .collect();

        OrderBookData {
            bids,
            asks,
            spread: format!("{:.4}", spread * 2.0),
            mid_price: format!("{:.2}", mid_price),
        }
    }

    /// Generate mock trade data
    fn generate_mock_trades(&self, base_price: f64, count: usize) -> Vec<TradeData> {
        (0..count)
            .map(|i| TradeData {
                price: format!("{:.2}", base_price + (i as f64 - 2.0) * 0.5),
                quantity: format!("{:.4}", 1.0 + (i as f64 * 0.5)),
                side: if i % 2 == 0 { "buy" } else { "sell" }.to_string(),
                timestamp: Some(prost_types::Timestamp::from(
                    Utc::now() - chrono::Duration::seconds(i as i64 * 10)
                )),
                trade_id: Uuid::new_v4().to_string(),
            })
            .collect()
    }

    /// Generate mock technical indicators
    fn generate_mock_technical_indicators(&self, base_price: f64) -> TechnicalIndicators {
        TechnicalIndicators {
            rsi: "65.4".to_string(),
            macd: "12.5".to_string(),
            macd_signal: "10.2".to_string(),
            bollinger_upper: format!("{:.2}", base_price * 1.02),
            bollinger_lower: format!("{:.2}", base_price * 0.98),
            sma_20: format!("{:.2}", base_price * 0.995),
            ema_20: format!("{:.2}", base_price * 0.998),
            volume_sma: "50000.0".to_string(),
            momentum: "8.7".to_string(),
            stochastic_k: "72.3".to_string(),
            stochastic_d: "68.9".to_string(),
        }
    }

    /// Generate mock sentiment analysis
    fn generate_mock_sentiment_analysis(&self, symbols: &[String]) -> Vec<TokenSentimentAnalysis> {
        symbols
            .iter()
            .enumerate()
            .map(|(i, symbol)| {
                let base_sentiment = 0.3 + (i as f64 * 0.1); // Range from 0.3 to 0.8
                
                TokenSentimentAnalysis {
                    symbol: symbol.clone(),
                    ml_sentiment: Some(MlSentimentScore {
                        overall_score: base_sentiment,
                        bullish_probability: 0.6 + (i as f64 * 0.05),
                        bearish_probability: 0.2 + (i as f64 * 0.02),
                        neutral_probability: 0.2 - (i as f64 * 0.01),
                        model_version: "v2.1.0".to_string(),
                        model_confidence: 0.85 + (i as f64 * 0.02),
                    }),
                    social_sentiment: Some(SocialMediaSentiment {
                        twitter_sentiment: base_sentiment + 0.1,
                        reddit_sentiment: base_sentiment - 0.05,
                        telegram_sentiment: base_sentiment + 0.15,
                        discord_sentiment: base_sentiment,
                        total_mentions: 1000 + (i as i64 * 200),
                        engagement_rate: 0.15 + (i as f64 * 0.02),
                        trending_hashtags: vec![
                            format!("#{}", symbol.to_lowercase()),
                            "#defi".to_string(),
                            "#crypto".to_string(),
                        ],
                    }),
                    news_sentiment: Some(NewsSentiment {
                        overall_sentiment: base_sentiment + 0.05,
                        positive_articles: 15 + (i as i64 * 3),
                        negative_articles: 5 + (i as i64),
                        neutral_articles: 10 + (i as i64 * 2),
                        top_sources: vec![
                            NewsSource {
                                source_name: "CoinDesk".to_string(),
                                sentiment_score: base_sentiment + 0.1,
                                article_count: 5,
                                credibility_score: 0.9,
                            },
                            NewsSource {
                                source_name: "CoinTelegraph".to_string(),
                                sentiment_score: base_sentiment,
                                article_count: 3,
                                credibility_score: 0.85,
                            },
                        ],
                        key_topics: vec![
                            "DeFi adoption".to_string(),
                            "Institutional interest".to_string(),
                            "Technical analysis".to_string(),
                        ],
                    }),
                    whale_sentiment: Some(WhaleSentiment {
                        accumulation_score: 0.7 + (i as f64 * 0.05),
                        distribution_score: 0.3 - (i as f64 * 0.02),
                        large_transactions_24h: 25 + (i as i64 * 5),
                        net_flow: format!("{:.2}", 1000.0 + (i as f64 * 500.0)),
                        recent_whale_activity: vec![
                            WhaleTransaction {
                                transaction_hash: format!("0x{:064x}", i),
                                amount: format!("{:.2}", 10000.0 + (i as f64 * 1000.0)),
                                from_address: format!("0x{:040x}", i),
                                to_address: format!("0x{:040x}", i + 1),
                                transaction_type: "accumulation".to_string(),
                                timestamp: Some(prost_types::Timestamp::from(
                                    Utc::now() - chrono::Duration::hours(i as i64)
                                )),
                            },
                        ],
                    }),
                    developer_sentiment: Some(DeveloperSentiment {
                        github_activity_score: 0.8 + (i as f64 * 0.03),
                        commits_last_30d: 150 + (i as i32 * 20),
                        active_developers: 25 + (i as i32 * 5),
                        code_quality_score: 0.85 + (i as f64 * 0.02),
                        open_issues: 45 + (i as i32 * 10),
                        closed_issues_last_30d: 80 + (i as i32 * 15),
                    }),
                    sentiment_trend: Some(SentimentTrend {
                        trend_direction: "improving".to_string(),
                        trend_strength: 0.7 + (i as f64 * 0.05),
                        momentum: 0.15 + (i as f64 * 0.02),
                        historical_data: (0..7)
                            .map(|day| SentimentDataPoint {
                                timestamp: Some(prost_types::Timestamp::from(
                                    Utc::now() - chrono::Duration::days(day)
                                )),
                                sentiment_score: base_sentiment + (day as f64 * 0.01),
                                confidence: 0.8 + (day as f64 * 0.01),
                            })
                            .collect(),
                    }),
                    confidence_score: 0.85 + (i as f64 * 0.02),
                }
            })
            .collect()
    }

    /// Generate mock arbitrage opportunities
    fn generate_mock_arbitrage_opportunities(&self, symbols: &[String]) -> Vec<ArbitrageOpportunity> {
        symbols
            .iter()
            .enumerate()
            .take(3) // Limit to 3 opportunities
            .map(|(i, symbol)| {
                let profit_percentage = 2.5 + (i as f64 * 0.5);
                
                ArbitrageOpportunity {
                    opportunity_id: Uuid::new_v4().to_string(),
                    symbol: symbol.clone(),
                    source_exchange: "Uniswap V3".to_string(),
                    target_exchange: "SushiSwap".to_string(),
                    source_chain: "ethereum".to_string(),
                    target_chain: "ethereum".to_string(),
                    source_price: format!("{:.6}", 1000.0 + (i as f64 * 100.0)),
                    target_price: format!("{:.6}", 1000.0 + (i as f64 * 100.0) * (1.0 + profit_percentage / 100.0)),
                    profit_amount: format!("{:.2}", 250.0 + (i as f64 * 50.0)),
                    profit_percentage: format!("{:.2}", profit_percentage),
                    estimated_gas_cost: format!("{:.2}", 25.0 + (i as f64 * 5.0)),
                    net_profit: format!("{:.2}", 225.0 + (i as f64 * 45.0)),
                    execution_complexity: 0.3 + (i as f64 * 0.1),
                    time_sensitivity: if i == 0 { "immediate" } else if i == 1 { "short" } else { "medium" }.to_string(),
                    execution_steps: vec![
                        "1. Borrow flash loan".to_string(),
                        "2. Buy on source exchange".to_string(),
                        "3. Sell on target exchange".to_string(),
                        "4. Repay flash loan".to_string(),
                        "5. Keep profit".to_string(),
                    ],
                    risks: vec![
                        "MEV competition".to_string(),
                        "Slippage risk".to_string(),
                        "Gas price volatility".to_string(),
                    ],
                }
            })
            .collect()
    }
}

#[tonic::async_trait]
impl MarketIntelligenceService for MarketIntelligenceServiceImpl {
    /// Get real-time market data with advanced analytics
    #[instrument(skip(self))]
    async fn get_real_time_market_data(
        &self,
        request: Request<GetRealTimeMarketDataRequest>,
    ) -> Result<Response<GetRealTimeMarketDataResponse>, Status> {
        let req = request.into_inner();
        
        // Apply rate limiting
        self.rate_limiter.check_rate_limit("get_real_time_market_data", "1000/hour")
            .await
            .map_err(|e| Status::resource_exhausted(e.to_string()))?;

        info!(
            symbols = ?req.symbols,
            blockchains = ?req.blockchains,
            data_granularity = req.data_granularity,
            "Getting real-time market data"
        );

        // Generate mock market data
        let data_points = self.generate_mock_market_data(&req.symbols);
        
        let market_summary = MarketSummary {
            total_market_cap: "2500000000000.00".to_string(),
            total_volume_24h: "85000000000.00".to_string(),
            btc_dominance: "42.5".to_string(),
            eth_dominance: "18.7".to_string(),
            active_cryptocurrencies: 12500,
            fear_greed_index: "65".to_string(),
            overall_trend: MarketTrend::MarketTrendBullish as i32,
        };

        let response = GetRealTimeMarketDataResponse {
            data_points,
            last_updated: Some(prost_types::Timestamp::from(Utc::now())),
            total_data_points: req.symbols.len() as i64,
            market_summary: Some(market_summary),
        };

        // Log audit trail
        self.audit_logger.log_action(
            "market_intelligence_service",
            "get_real_time_market_data",
            &format!("Retrieved market data for {} symbols", req.symbols.len()),
            serde_json::json!({
                "symbols": req.symbols,
                "data_granularity": req.data_granularity,
                "include_orderbook": req.include_orderbook,
                "include_trades": req.include_trades,
                "data_points_count": response.data_points.len()
            }),
        ).await;

        Ok(Response::new(response))
    }

    /// Get advanced sentiment analysis with ML-powered insights
    #[instrument(skip(self))]
    async fn get_advanced_sentiment_analysis(
        &self,
        request: Request<GetAdvancedSentimentAnalysisRequest>,
    ) -> Result<Response<GetAdvancedSentimentAnalysisResponse>, Status> {
        let req = request.into_inner();
        
        // Apply rate limiting
        self.rate_limiter.check_rate_limit("get_advanced_sentiment_analysis", "200/hour")
            .await
            .map_err(|e| Status::resource_exhausted(e.to_string()))?;

        info!(
            symbols = ?req.symbols,
            time_frame = req.time_frame,
            include_social_media = req.include_social_media,
            "Getting advanced sentiment analysis"
        );

        // Generate mock sentiment analysis
        let token_sentiments = self.generate_mock_sentiment_analysis(&req.symbols);
        
        let market_overview = MarketSentimentOverview {
            overall_market_sentiment: 0.65,
            dominant_emotion: "greed".to_string(),
            fear_greed_index: 72.0,
            current_phase: MarketPhase::MarketPhaseMarkup as i32,
            trending_narratives: vec![
                "DeFi summer 2.0".to_string(),
                "Institutional adoption".to_string(),
                "Layer 2 scaling".to_string(),
            ],
        };

        let alerts = vec![
            SentimentAlert {
                alert_type: "sentiment_spike".to_string(),
                symbol: req.symbols.first().cloned().unwrap_or_default(),
                message: "Significant positive sentiment spike detected".to_string(),
                severity: AlertSeverity::AlertSeverityMedium as i32,
                triggered_at: Some(prost_types::Timestamp::from(Utc::now())),
                supporting_data: vec![
                    "Twitter mentions +150%".to_string(),
                    "Whale accumulation detected".to_string(),
                ],
            },
        ];

        let response = GetAdvancedSentimentAnalysisResponse {
            token_sentiments,
            market_overview: Some(market_overview),
            alerts,
        };

        // Log audit trail
        self.audit_logger.log_action(
            "market_intelligence_service",
            "get_advanced_sentiment_analysis",
            &format!("Retrieved sentiment analysis for {} symbols", req.symbols.len()),
            serde_json::json!({
                "symbols": req.symbols,
                "time_frame": req.time_frame,
                "include_social_media": req.include_social_media,
                "include_news_analysis": req.include_news_analysis,
                "sentiment_count": response.token_sentiments.len()
            }),
        ).await;

        Ok(Response::new(response))
    }

    /// Get predictive analytics for yield optimization
    #[instrument(skip(self))]
    async fn get_yield_optimization_predictions(
        &self,
        request: Request<GetYieldOptimizationPredictionsRequest>,
    ) -> Result<Response<GetYieldOptimizationPredictionsResponse>, Status> {
        let req = request.into_inner();

        // Validate authentication
        let user_id = self.auth_service.validate_user_access(&req.user_id)
            .await
            .map_err(|e| Status::unauthenticated(e.to_string()))?;

        // Apply rate limiting
        self.rate_limiter.check_rate_limit("get_yield_optimization_predictions", "50/hour")
            .await
            .map_err(|e| Status::resource_exhausted(e.to_string()))?;

        info!(
            user_id = user_id,
            risk_tolerance = req.risk_tolerance,
            time_horizon = req.time_horizon,
            "Getting yield optimization predictions"
        );

        // Generate mock optimization suggestions
        let suggestions = vec![
            YieldOptimizationSuggestion {
                suggestion_id: Uuid::new_v4().to_string(),
                action_type: "rebalance".to_string(),
                protocol_name: "Aave V3".to_string(),
                asset: "USDC".to_string(),
                suggested_amount: "5000.00".to_string(),
                expected_apy: "8.5".to_string(),
                risk_level: "LOW".to_string(),
                confidence_score: 0.85,
                reasoning: "Higher yield with similar risk profile".to_string(),
                benefits: vec![
                    "2.3% APY improvement".to_string(),
                    "Better liquidity".to_string(),
                    "Lower smart contract risk".to_string(),
                ],
                risks: vec![
                    "Protocol risk".to_string(),
                    "Impermanent loss potential".to_string(),
                ],
            },
            YieldOptimizationSuggestion {
                suggestion_id: Uuid::new_v4().to_string(),
                action_type: "add_position".to_string(),
                protocol_name: "Compound V3".to_string(),
                asset: "ETH".to_string(),
                suggested_amount: "2.5".to_string(),
                expected_apy: "6.8".to_string(),
                risk_level: "MEDIUM".to_string(),
                confidence_score: 0.78,
                reasoning: "Diversification opportunity with solid returns".to_string(),
                benefits: vec![
                    "Portfolio diversification".to_string(),
                    "Stable protocol".to_string(),
                    "Good liquidity".to_string(),
                ],
                risks: vec![
                    "ETH price volatility".to_string(),
                    "Smart contract risk".to_string(),
                ],
            },
        ];

        let current_analysis = PortfolioOptimizationAnalysis {
            current_apy: 6.2,
            optimized_apy: 8.7,
            improvement_potential: 2.5,
            risk_score: "MEDIUM".to_string(),
            diversification_score: 0.72,
            optimization_opportunities: vec![
                "Rebalance to higher-yield protocols".to_string(),
                "Increase stablecoin allocation".to_string(),
                "Consider liquid staking options".to_string(),
            ],
        };

        let risk_scenarios = vec![
            RiskScenario {
                scenario_name: "Market downturn".to_string(),
                probability: 0.25,
                impact_description: "20-30% portfolio value decline".to_string(),
                potential_loss: "15000.00".to_string(),
                mitigation_strategy: "Increase stablecoin allocation".to_string(),
            },
            RiskScenario {
                scenario_name: "Protocol hack".to_string(),
                probability: 0.05,
                impact_description: "Total loss of affected position".to_string(),
                potential_loss: "5000.00".to_string(),
                mitigation_strategy: "Diversify across multiple protocols".to_string(),
            },
        ];

        let yield_forecast = YieldForecast {
            predictions: vec![
                YieldPrediction {
                    time_period: "1 month".to_string(),
                    predicted_apy: "8.2".to_string(),
                    lower_bound: "7.5".to_string(),
                    upper_bound: "9.1".to_string(),
                    confidence: 0.8,
                },
                YieldPrediction {
                    time_period: "3 months".to_string(),
                    predicted_apy: "7.8".to_string(),
                    lower_bound: "6.9".to_string(),
                    upper_bound: "8.9".to_string(),
                    confidence: 0.65,
                },
            ],
            confidence_interval: 0.8,
            methodology: "ML ensemble model with market factor analysis".to_string(),
        };

        let response = GetYieldOptimizationPredictionsResponse {
            suggestions,
            current_analysis: Some(current_analysis),
            risk_scenarios,
            yield_forecast: Some(yield_forecast),
        };

        // Log audit trail
        self.audit_logger.log_action(
            "market_intelligence_service",
            "get_yield_optimization_predictions",
            &format!("Generated yield optimization predictions for user: {}", user_id),
            serde_json::json!({
                "user_id": user_id,
                "risk_tolerance": req.risk_tolerance,
                "time_horizon": req.time_horizon,
                "suggestions_count": response.suggestions.len(),
                "risk_scenarios_count": response.risk_scenarios.len()
            }),
        ).await;

        Ok(Response::new(response))
    }

    /// Detect cross-chain arbitrage opportunities
    #[instrument(skip(self))]
    async fn detect_arbitrage_opportunities(
        &self,
        request: Request<DetectArbitrageOpportunitiesRequest>,
    ) -> Result<Response<DetectArbitrageOpportunitiesResponse>, Status> {
        let req = request.into_inner();

        // Apply rate limiting
        self.rate_limiter.check_rate_limit("detect_arbitrage_opportunities", "100/hour")
            .await
            .map_err(|e| Status::resource_exhausted(e.to_string()))?;

        info!(
            symbols = ?req.symbols,
            source_chains = ?req.source_chains,
            target_chains = ?req.target_chains,
            min_profit_threshold = req.min_profit_threshold,
            "Detecting arbitrage opportunities"
        );

        // Generate mock arbitrage opportunities
        let opportunities = self.generate_mock_arbitrage_opportunities(&req.symbols);

        let market_overview = ArbitrageMarketOverview {
            total_opportunities: opportunities.len() as i32,
            total_potential_profit: "1250.75".to_string(),
            average_profit_percentage: "2.8".to_string(),
            most_profitable_pairs: vec![
                "ETH/USDC".to_string(),
                "WBTC/USDT".to_string(),
                "LINK/USDC".to_string(),
            ],
            most_active_chains: vec![
                "ethereum".to_string(),
                "polygon".to_string(),
                "arbitrum".to_string(),
            ],
        };

        let alerts = vec![
            ArbitrageAlert {
                alert_id: Uuid::new_v4().to_string(),
                symbol: req.symbols.first().cloned().unwrap_or_default(),
                profit_percentage: "3.2".to_string(),
                estimated_duration: "2 minutes".to_string(),
                urgency: AlertSeverity::AlertSeverityHigh as i32,
                expires_at: Some(prost_types::Timestamp::from(
                    Utc::now() + chrono::Duration::minutes(5)
                )),
            },
        ];

        let response = DetectArbitrageOpportunitiesResponse {
            opportunities,
            market_overview: Some(market_overview),
            alerts,
        };

        // Log audit trail
        self.audit_logger.log_action(
            "market_intelligence_service",
            "detect_arbitrage_opportunities",
            &format!("Detected {} arbitrage opportunities", response.opportunities.len()),
            serde_json::json!({
                "symbols": req.symbols,
                "source_chains": req.source_chains,
                "target_chains": req.target_chains,
                "opportunities_count": response.opportunities.len(),
                "total_potential_profit": response.market_overview.as_ref().map(|o| &o.total_potential_profit)
            }),
        ).await;

        Ok(Response::new(response))
    }
}
